--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <link rel="stylesheet" href="css/main.css">
+    
     <title> Divine Femenine Tarot </title>
 </head>
 <body>
@@ -12,9 +15,11 @@
         <img id="main-logo" src="images/Logo.png" alt="Cocorrina Logo">
     </header>
 
+    <!-- image go here -->
+
 <main>
-    <nav>
-        <ul>
+    <nav id="character-nav">
+        <ul class="characters">
             <li><img src="images/QUEEN OF CUPS.png" alt=""></li>
             <li><img src="images/QUEEN OF PENTACLES.png" alt=""></li>
             <li><img src="images/QUEEN OF SWORDS.png" alt=""></li>
