--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <h1>Divine Femenine Tarot</h1>
-        <img id="main-logo" src="images/Logo.png" alt="Cocorrina Logo">
+        <img id="main-logo" src="images/Logo.svg" alt="Cocorrina Logo">
     </header>
 
     <!-- image go here -->
@@ -20,10 +20,10 @@
 <main>
     <nav id="character-nav">
         <ul class="characters">
-            <li><img src="images/QUEEN OF CUPS.png" alt=""></li>
-            <li><img src="images/QUEEN OF PENTACLES.png" alt=""></li>
-            <li><img src="images/QUEEN OF SWORDS.png" alt=""></li>
-            <li><img src="images/QUEEN OF WANDS.jpg" alt=""></li>
+            <li><img src="images/icon_wand.png" alt="Wands_icon"></li>
+            <li><img src="images/icon_cup.png" alt="Cups_icon"></li>
+            <li><img src="images/icon_sword.png" alt="swords_icon"></li>
+            <li><img src="images/icon_pentacle.png" alt="pentacle_icon"></li>
         </ul>
     </nav>
 
