--- a/index.html
+++ b/index.html
@@ -11,17 +11,37 @@
 </head>
 <body>
     <header>
-        <h1>Divine Femenine Tarot</h1>
+        <h1 class="hidden">Divine Femenine Tarot</h1>
         <img id="main-logo" src="images/Logo.svg" alt="Cocorrina Logo">
     </header>
 
     <main>
         <nav id="character-nav">
             <ul class="characters">
-                <li><img src="images/icon_wand.png" alt="Wands_icon"></li>
-                <li><img src="images/icon_cup.png" alt="Cups_icon"></li>
-                <li><img src="images/icon_sword.png" alt="swords_icon"></li>
-                <li><img src="images/icon_pentacle.png" alt="pentacle_icon"></li>
+                <li>
+                    <div class="sprite"></div>
+                    <div class="orange_bumper"></div>
+                    <h5>Queen of Wands</h5>
+                    <!-- <img src="images/icon_wand.png" alt="Wands_icon"> -->
+                </li>
+                <li>
+                    <div class="sprite"></div>
+                    <div class="orange_bumper"></div>
+                    <h5>Queen of cups</h5>
+                    <!-- <img src="images/icon_cup.png" alt="Cups_icon"> -->
+                </li>
+                <li>
+                    <div class="sprite"></div>
+                    <div class="orange_bumper"></div>
+                    <h5>Queen of Swords</h5>
+                    <!-- <img src="images/icon_sword.png" alt="swords_icon"> -->
+                </li>
+                <li>
+                    <div class="sprite"></div>
+                    <div class="orange_bumper"></div>
+                    <h5>Queen of Pentacles</h5>
+                    <!-- <img src="images/icon_pentacle.png" alt="pentacle_icon"> -->
+                </li>
             </ul>
         </nav>
 
